tests/lean/StxQuot.lean.expected.out
"(Term.id `Nat.one._@.UnhygienicMain._hyg.1 [])"
"<missing>"
"<missing>"
"<missing>"
"(Term.add <missing> \"+\" (Term.num (numLit \"1\")))"
"(Term.add <missing> \"+\" (Term.num (numLit \"1\")))"
"(Term.add (Term.num (numLit \"1\")) \"+\" (Term.num (numLit \"1\")))"
"(Term.fun \"fun\" [(Term.id `a._@.UnhygienicMain._hyg.1 [])] \"=>\" (Term.id `a._@.UnhygienicMain._hyg.1 []))"
"(Command.declaration\n (Command.declModifiers [] [] [] [] [] [])\n (Command.def\n  \"def\"\n  (Command.declId `foo._@.UnhygienicMain._hyg.1 [])\n  (Command.optDeclSig [] [])\n  (Command.declValSimple \":=\" (Term.num (numLit \"1\")))))"
"[(Command.declaration\n  (Command.declModifiers [] [] [] [] [] [])\n  (Command.def\n   \"def\"\n   (Command.declId `foo._@.UnhygienicMain._hyg.1 [])\n   (Command.optDeclSig [] [])\n   (Command.declValSimple \":=\" (Term.num (numLit \"1\")))))\n (Command.declaration\n  (Command.declModifiers [] [] [] [] [] [])\n  (Command.def\n   \"def\"\n   (Command.declId `bar._@.UnhygienicMain._hyg.1 [])\n   (Command.optDeclSig [] [])\n   (Command.declValSimple \":=\" (Term.num (numLit \"2\")))))]"
"(Term.id `Nat.one._@.UnhygienicMain._hyg.1 [])"
"(Term.app\n (Term.id `f._@.UnhygienicMain._hyg.1 [])\n [(Term.id `Nat.one._@.UnhygienicMain._hyg.1 []) (Term.id `Nat.one._@.UnhygienicMain._hyg.1 [])])"
"(Term.dollar\n (Term.id `f._@.UnhygienicMain._hyg.1 [])\n \"$\"\n (Term.app\n  (Term.id `f._@.UnhygienicMain._hyg.1 [])\n  [(Term.id `Nat.one._@.UnhygienicMain._hyg.1 []) (Term.num (numLit \"1\"))]))"
"(Term.app (Term.id `f._@.UnhygienicMain._hyg.1 []) [(Term.id `Nat.one._@.UnhygienicMain._hyg.1 [])])"
"(Term.proj (Term.id `Nat.one._@.UnhygienicMain._hyg.1 []) \".\" `b._@.UnhygienicMain._hyg.1)"
"(Term.add (Term.num (numLit \"2\")) \"+\" (Term.num (numLit \"1\")))"
"(Command.declaration\n (Command.declModifiers [] [] [] [] [] [])\n (Command.def\n  \"def\"\n  (Command.declId `foo._@.UnhygienicMain._hyg.1 [])\n  (Command.optDeclSig [] [])\n  (Command.declValSimple \":=\" (Term.num (numLit \"1\")))))"
"[(Command.declaration\n  (Command.declModifiers [] [] [] [] [] [])\n  (Command.def\n   \"def\"\n   (Command.declId `bar._@.UnhygienicMain._hyg.1 [])\n   (Command.optDeclSig [] [])\n   (Command.declValSimple \":=\" (Term.num (numLit \"2\")))))\n (Command.declaration\n  (Command.declModifiers [] [] [] [] [] [])\n  (Command.def\n   \"def\"\n   (Command.declId `foo._@.UnhygienicMain._hyg.1 [])\n   (Command.optDeclSig [] [])\n   (Command.declValSimple \":=\" (Term.num (numLit \"1\")))))]"
"0"
"1"
"(Term.fun\n \"fun\"\n [(Term.id `a._@.UnhygienicMain._hyg.1 [])\n  (Term.paren\n   \"(\"\n   [(Term.id `b._@.UnhygienicMain._hyg.1 []) [(Term.typeAscription \":\" (Term.id `Nat._@.UnhygienicMain._hyg.1 []))]]\n   \")\")]\n \"=>\"\n (Term.num (numLit \"1\")))"
"#[(Term.paren\n \"(\"\n [(Term.id `a._@.UnhygienicMain._hyg.1 []) [(Term.typeAscription \":\" (Term.id `Nat._@.UnhygienicMain._hyg.1 []))]]\n \")\"), (Term.id `b._@.UnhygienicMain._hyg.1 [])]"
"`a._@.UnhygienicMain._hyg.1"
"(Term.forall \"∀\" [(Term.simpleBinder [(Term.hole \"_\")])] \",\" (Term.id `c._@.UnhygienicMain._hyg.1 []))"
"(Term.simpleBinder [(Term.hole \"_\")])"
"`a._@.UnhygienicMain._hyg.1"
"(Term.id `a._@.UnhygienicMain._hyg.1 [(Term.explicitUniv \".{\" [(Level.num (numLit \"0\"))] \"}\")])"
"#[]"
StxQuot.lean:40:74: error: expected '=>'
